--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "redis": "^2.8.0",
     "redux": "^4.0.4",
