--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-sdk": "^2.562.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bookshelf": "^1.0.1",
@@ -12,6 +13,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "knex": "^0.19.5",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.4",
     "passport": "^0.4.0",
