--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "body-parser": "^1.19.0",
     "bookshelf": "^1.0.1",
     "bootstrap": "^4.3.1",
+    "connect-flash": "^0.1.1",
     "connect-redis": "^4.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "knex": "^0.19.5",
+    "method-override": "^3.0.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "node-sass": "^4.12.0",
