--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "body-parser": "^1.19.0",
     "bookshelf": "^1.0.1",
     "bootstrap": "^4.3.1",
+    "connect-flash": "^0.1.1",
     "connect-redis": "^4.0.3",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "knex": "^0.19.5",
+    "method-override": "^3.0.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.4",
     "passport": "^0.4.0",
@@ -24,6 +27,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "redis": "^2.8.0",
+    "redis-server": "^1.2.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
