--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "javascript-time-ago": "^2.0.4",
     "knex": "^0.19.5",
     "method-override": "^3.0.0",
+    "moment": "^2.24.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "node-sass": "^4.12.0",
